--- a/wiki/StatusPage.wiki
+++ b/wiki/StatusPage.wiki
@@ -21,7 +21,8 @@ Completion:		September 1st, 2008
 
 =Milestone 2: Developer tools=
   * developer documentation for building Mobile Office 
-  * ~~mailing lists for questions and commit notifcations~~
+  * ~~main mailing list for the project - http://groups.google.com/group/officereader~~
+  * ~~and commit notifcations~~http://groups.google.com/group/officereader_commits~~
   * setup of public available developer related tools (lxr)
   * make code warning free during compilation 
 
