Edited wiki page through web user interface.

--- a/wiki/StatusPage.wiki
+++ b/wiki/StatusPage.wiki
@@ -24,6 +24,7 @@ Completion:		September 1st, 2008
   * developer documentation for building Mobile Office 
   * ~~main mailing list for the project~~
   * ~~mailing list for commit notifcations~~
+  * initial mail to project mailing list including introduction and links
   * setup of public available developer related tools (lxr)
   * make source code warning free during compilation 
 
