--- a/wiki/OlderVersions.wiki
+++ b/wiki/OlderVersions.wiki
@@ -1,4 +1,6 @@
+#summary Downloads for older, deprecated Symbian devices
 #labels Old,Symbian,Release
+
 There are older Symbian OS devices on which Office Reader is running as well. These versions were already available as Freeware before, here are the links:
 
 S60 2nd Edition:
