--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -18,13 +18,17 @@ Please note: later SDK's such as S60 3rd Edition FP X or UIQ3 3.x will work as w
 
 = Compiling by command line = 
 
-To compile the project, run these commands to build for emulator:
+To compile the project, run this command first to prepare the workspace based on target:
 
-bldmake bldfiles // this will prepare the workspace based on target
-ABLD.bat build winscw udeb // this wi
+*bldmake bldfiles*
 
-or these ones for targte device:
-ABLD.bat build gcce urel
+Then either run for emulator build
+
+*ABLD.bat build winscw udeb*
+
+or this one for target device:
+
+*ABLD.bat build gcce urel*
 
 = IDE's =
 
