Edited wiki page through web user interface.

--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -4,6 +4,9 @@
 
 Office Reader can be compiled just like any other Symbian OS project, there is nothing special about it. So if you are completly new to Symbian OS, reading some "Getting Started" guides first will help you a lot. 
 
+= Check out the source = 
+
+svn checkout http://officereader.googlecode.com/svn/trunk/ officereader-read-only
 
 = Getting the right SDK =
 
@@ -29,6 +32,22 @@ Then either run for emulator build
 or this one for target device:
 
 *ABLD.bat build gcce urel*
+
+
+This to commands have to be run in the following folders:
+
+SyExpat/Symbian  // compile SyExpat parser
+sheetcontrol/group // compile the sheet engine for ods files
+officereader/Engine/group // compile the OpenDocument Engine
+
+officereader\S60_3rd\group // compile application for S60 3rd
+
+or 
+
+officereader\UIQ3\group // compile application for UIQ3
+
+echo "Finished for S60 3nd Edition"
+
 
 = IDE's =
 
