--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Office Reader can be compiled just like any other Symbian OS project, there is nothing special about it. So if you are completly new to Symbian OS, reading some "Getting Started" guides first will help you a lot. 
+Office Reader can be compiled just like any other Symbian OS project, there is nothing special about it. So if you are completly new to Symbian OS, reading some "Getting Started" guides first will help you a lot. Please note that Symbian only support a Windows host for building, but there are some project to get this to run on Linux as well.
 
 = Check out the source = 
 
@@ -49,13 +49,18 @@ or
 officereader/UIQ3/group // compile application for UIQ3
 
 
+In the top source directory there are also two bat files, which will run these commands for a target device build automatically. These can be easily adapted.
+
+= Running the application =
+
+If you have build for emulator ()
 
 = IDE's =
 
-Instead of compiling by command line, you can also use one of the available IDE's
+Instead of compiling and packagin by command line, you can also use one of the available IDE's which will make your life a little bit easier:
 
   * Carbide.c++, all editions
   * Microsoft Visual Studio.NET 2003 with Carbide.vs 2.0 plugin
   * Microsoft Visual Studio 2005 with Carbide.vs 3.0 plugin
 
-You just have to import the mmp files into the IDE and compile the project there. For additionl information, see the manuals of the corresponding IDEs.
+You just have to import the mmp files into the IDE and compile and build the project there. For additionl information, see the manuals of the corresponding IDEs.
