--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Office Reader can be compiled just like any other Symbian OS project, there is nothing special about it. So if you are completly new to Symbian OS, reading some "Getting Started" guides first will help you a lot. Please note that Symbian only support a Windows host for building, but there are some project to get this to run on Linux as well.
+Office Reader can be compiled just like any other Symbian OS project, there is nothing special about it. So if you are completly new to Symbian OS, reading some [http://wiki.forum.nokia.com/index.php/How_do_I_start_programming_for_Symbian_OS%3F "Getting Started"] guides first will help you a lot. Please note that Symbian only support a Windows host for building, but there are some project to get this to run on Linux as well.
 
 = Check out the source = 
 
