--- a/wiki/Developer.wiki
+++ b/wiki/Developer.wiki
@@ -4,6 +4,6 @@
 
   * You can browse the latest source code here: http://code.google.com/p/officereader/source/browse/
 
-  * An OpenGrok installation, a searchable indexer, for the source code including full search, definitions, symbols and file paths can be found here: http://officereader.sept-solutions.com/source/
+  * An OpenGrok installation, a searchable indexer, for the source code including full search, definitions, symbols and file paths can be found here: [http://redhost.de:8180/source/ OpenGrok]
 
   * commit and bug activities mailing list: http://groups.google.com/group/officereader_commits
