--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -137,8 +137,8 @@ Please note, that office reader is not a desktop application, but an application
 == Results == 
 
 || *Section* || *Total* || *Pass* || *Fail* || *%* || 
-|| General || || || || ||    
-|| Formatting Properties || || || || || 
-|| Text Contents || || || || || 
+|| General || 4 || || || ||    
+|| Formatting Properties || 90 || || || || 
+|| Text Contents || 13 || || || || 
 
 TableFormattingProperties, TableCellFormattingProperties, TableRowFormattingProperties, Text Frames, Drawing Content and Presentation content testcases were not checked, as Office Reader does not support this completly currently.
